--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div id="report_title">대한민국 범죄 데이터 보고서</div>
   <div id="report_title_contents">본 보고서는 대한민국 경찰청과 대검찰청의 통계 자료를 바탕으로 한국형사정책연구원에서 범죄/형사사법 통계정보(CCJS) 통합 데이터 베이스를 집대성하여 시각화시킨 보고서이다. 이에 CCP는 이 데이터 베이스를 통해 여러분과 함께 대한민국 치안 현황을 더 넓고 쉽게 알아보고자 한다. </div>
   <div id="report_caution">※ PC에서 최적화된 인터랙션을 볼 수 있습니다.</div>
-  <iframe id="report_1" width=100% height=1080 src="https://daisy.newsjel.ly/enterprise/gallery/1634?share=d_embed" frameborder="0"></iframe>
   <video id="report_video" src="source/report_video.mp4" type="video/mp4" autoplay loop muted></video>
+  <div id="report_1"><iframe width=100% height=1080 src="https://daisy.newsjel.ly/enterprise/gallery/1634?share=d_embed" frameborder="0"></iframe></div>
 </body>
 </html>
