--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="source/example.js"></script>
 </head>
 <body>
-  <a href="index.html">
+  <a href="https://krksk.github.io/CCP_Main/">
     <div id="logo_type">
       <div id="logoSpread">Cold Case Profiling
       </div>
@@ -23,8 +23,8 @@
         <th id="menu1"><a href="#" style="color:white; text-decoration:none;">Profiling</a>
           <ul id="sub-menu">
             <li><a href="https://krksk.github.io/CCP_Prf_1/" aria-label="subemnu">1. 송혜희 양 실종 사건</a></li>
-            <li><a href="https://krksk.github.io/CCP_Prf_2/index.html" aria-label="subemnu">2. 부산 아동 연쇄 살인 사건</a></li>
-            <li><a href="#" aria-label="subemnu">3. 사바이 주점 학살 사건</a></li>
+            <li><a href="https://krksk.github.io/CCP_Prf_2/" aria-label="subemnu">2. 부산 아동 연쇄 살인 사건</a></li>
+            <li><a href="https://krksk.github.io/CCP_Prf_3/" aria-label="subemnu">3. 사바이 주점 학살 사건</a></li>
           </ul>
         </th>
         <th id="menu2"><a href="https://krksk.github.io/CCP_Report" style="color:white; text-decoration:none;">Report</th></a>
@@ -37,16 +37,30 @@
   </svg>
   <div id="footer">Copyrightⓒ 2019/All Rights Reserved - KSK</div>
   <div id="report_title">대한민국 치안 현황 보고서</div>
-  <div id="report_title_contents">본 보고서는 대한민국 경찰청과 대검찰청의 통계 자료를 바탕으로 한국형사정책연구원에서 범죄/형사사법 통계정보(CCJS) 통합 데이터 베이스를 집대성하여 시각화시킨 보고서이다. 이에 CCP는 이 데이터 베이스를 통해 여러분과 함께 대한민국 치안 현황을 더 넓고 쉽게 알아보고자 한다. </div>
+  <div id="report_title_contents">본 보고서는 대한민국 경찰청과 대검찰청의 통계 자료를 바탕으로 데이터 베이스를 집대성하여 시각화시킨 <br>보고서이다. 범죄 발생 기간, 일기, 장소, 검거율, 조치율 등 모든 치안에 관련된 데이터를 한 눈에 보기 쉽게 <br>정리하는 방법이 없을까해서 이 보고서를 만들게 되었다. 이에 CCP는 이 데이터 베이스를 통해 여러분과 함께 <br>대한민국 치안 현황을 더 넓고 쉽게 알아보고자 한다. </div>
   <div id="report_caution">※ PC에서 최적화된 인터랙션을 볼 수 있습니다.</div>
   <video id="report_video" src="source/report_video.mp4" type="video/mp4" autoplay loop muted></video>
+
   <!--Report_1-->
-  <div id="report_1">범죄 발생부터 검거까지의 기간</div>
-  <div id="report_1_data"><iframe width="1300" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiYjYzNTRhM2ItMWFmYi00YmZlLWE3YzAtMzVmNDE1ODBiYzE0IiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe></div>
+
+  <div id="report_1">범죄 발생 및 검거 현황</div>
+  <div id="report_1_data"><iframe width="1150" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiMGY3ZGIzYTgtNzZiMy00YTFhLWE2NWMtMmZlYjJkY2Y0YmFkIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe></div>
   <div></div>
   <div id="report_1_citation1">* 자료 출처 : 경찰청</div>
   <div id="report_1_citation2">* 데이터 시각화 인용 : Microsoft Power BI</div>
   <div id="report_1_citation3">* 그래프에 마우스 커서를 올리면 상세 확인이 가능합니다.</div>
   <div id="monitor"></div>
+
+
+  <!--Report_2-->
+
+  <div id="report_2">범죄 발생 및 검거 현황</div>
+  <div id="report_2_data"><iframe width="1150" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiNWI4YzJkZmYtMTg0NS00MTVjLTkzMjMtMzczNzYzYzIwYjRjIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe></div>
+  <div></div>
+  <div id="report_2_citation1">* 자료 출처 : 경찰청</div>
+  <div id="report_2_citation2">* 데이터 시각화 인용 : Microsoft Power BI</div>
+  <div id="report_2_citation3">* 그래프에 마우스 커서를 올리면 상세 확인이 가능합니다.</div>
+
+<script>(function(w,d,u){var s = d.createElement("script"),fs = d.getElementsByTagName("script")[0];s.async=1;s.src=u;fs.parentNode.insertBefore(s,fs);})(window,document,"//data.seoul.go.kr/visual/embed/830");</script>
 </body>
 </html>
