--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="source/main_style.css">
 <link href="main_style.css" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cantata+One&display=swap" rel="stylesheet">
 <script src="source/example.js"></script>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <div id="logo_type">
       <div id="logoSpread">Cold Case Profiling
       </div>
-      <img src="source/logoType.png" style="width: 1.7vw; height: 1.7vw;">
+      <img src="source/logoType.png" style="width: 50px; height: 40px;">
     </div>
     </a>
   <div id="nav_menu">
@@ -32,8 +33,8 @@
       </tr>
     </table>
   </div>
-  <svg width="100%">
-	<rect width="100%" height="3.5vw" fill="black"></rect>
+  <svg width="101%">
+	<rect width="100%" height="80px" fill="black"></rect>
   </svg>
   <div id="footer">Copyrightⓒ 2019/All Rights Reserved - KSK</div>
   <div id="report_title">대한민국 치안 현황 보고서</div>
