--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div id="report_caution">※ PC에서 최적화된 인터랙션을 볼 수 있습니다.</div>
   <video id="report_video" src="source/report_video.mp4" type="video/mp4" autoplay loop muted></video>
 
-  <!-- Contents -->
+<!-- Contents -->
   <div id="power_container">
     <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
@@ -53,155 +53,158 @@
       <h3>출처 : 경찰청,「경찰청범죄통계」</h3>
       <br>
       <p style="width: 21vw; height:16vw;">교통 범죄, 지능 범죄, 폭력 범죄 순으로 가장 많이 발생한 것을 볼 수 있다. 검거율로 따지면 노동 범죄가 <font color=#ff33333;>98.5%</font>로 압도적으로 높은 수치를 볼 수 있지만 절도 범죄와 지능 범죄 같은 경우엔 매우 낮은 수치를 보여준다.<br> 그 이유로 절도 같은 경우엔 워낙에 순식간에 범행이 이루어지는 점도 있고 그에 따라 현행범 검거가 특히 어려워 따로 치안 정책을 마련해야 한다는 말도 있다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    </div>
+    <div id="data_visualization">
+      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiODY4MzkxMTktZjNmNi00NTU5LTljMmYtZDcxN2Q0YmNlMTRiIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
+      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
+      <p style="text-align:right;">* 죄종을 클릭하거나 그래프를 클릭하면 해당 죄종의 데이터를 볼 수 있습니다.</p>
+    </div>
+  </div>
+<br><br><br><br><br><br><br><br><br>
+  <div id="power_container">
+    <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
       <h1 style="font-size: 2.5vw;">범죄 발생부터<br> 검거까지의 기간</h1>
       <h3>출처 : 경찰청,「경찰청범죄통계」</h3>
       <br>
       <p style="width: 21vw; height:16vw;">강력 범죄와 폭력 범죄의 경우 경찰의 확실한 초동 수사 덕분에 절반 이상이 하루 만에 검거되는 것을 확인할 수 있다. 가장 발생률이 높았던 교통 범죄의 경우에도 검거 기간이 대개 짧은 것으로 드러났다. <br><br>
       하지만 지능 범죄의 경우엔 대부분 검거 기간이 꽤나 걸리고 1년 이상이나 잡히지 않는 경우도 많아 미제로 남는 경우가 있다. 검거율도 <font color=#ff33333;>74.5%</font>밖에 되지 않는다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    </div>
+    <div id="data_visualization">
+      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiYmVlNTRhM2YtMTRiYS00ZmU3LWEyNWUtOGY5ZTljZWNmMjIxIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
+      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
+      <p style="text-align:right;">* 죄종을 클릭하거나 그래프를 클릭하면 해당 죄종의 데이터를 볼 수 있습니다.</p>
+    </div>
+  </div>
+<br><br><br><br><br><br><br><br><br>
+  <div id="power_container">
+    <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
       <h1 style="font-size: 2.5vw;">범죄 발생부터<br> 처리까지의 기간</h1>
       <h3>출처 : 경찰청,「범죄분석통계」</h3>
       <br>
       <p style="width: 21vw; height:16vw;">사건을 범죄로 인지한 뒤 처리까지 하는 데 걸리는 기간이다. <font color=#ff33333;>대부분의 범죄는 1~2개월 이내에 처리</font>가 되는 모습을 볼 수 있다. 하지만 특히 유심히 지켜보아야 할 부분은 공무원 범죄인데 공무원 범죄의 경우 대개 3개월 이상의 처리 기간을 가진다.<br><br>
       지난해 <font color=#ff33333;>공무원 범죄의 48.9%는 모두 경찰이 저지른 것</font>이라고 한다. 특히 강력·절도·폭력·지능 등 7개 범죄 유형에서 압도적인 1위를 차지했다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    </div>
+    <div id="data_visualization">
+      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiNDRjYTUyNGItN2E2NC00YThjLThkMjUtZTVkZjdmNGRmN2I0IiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
+      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
+      <p style="text-align:right;">* 죄종을 클릭하거나 그래프를 클릭하면 해당 죄종의 데이터를 볼 수 있습니다.</p>
+    </div>
+  </div>
+<br><br><br><br><br><br><br><br><br>
+  <div id="power_container">
+    <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
-      <h1 style="font-size: 2.5vw;">범죄 검거 단서</h1>
-      <h3>출처 : 경찰청,「경찰청범죄통계」</h3>
-      <br>
-      <p style="width: 21vw; height:16vw;">환경 범죄와 병역 범죄, 보건 범죄의 경우 고발로 인해 검거된 경우가 압도적으로 높았다. <br>
-      제일 발생률이 높았던 교통 범죄는 신고와 불심검문으로 검거되는 경우가 대부분을 차지했다. <br>
-      강력 범죄중 가장 흉악 범죄인 살인기수는 타인의 신고로 30.9%가 검거되었으며 다음으로 변사체 발견, 현행범 체포 순으로 사건이 검거되었다.
+        <h1 style="font-size: 2.5vw;">범죄 검거 단서</h1>
+        <h3>출처 : 경찰청,「경찰청범죄통계」</h3>
+        <br>
+        <p style="width: 21vw; height:16vw;">환경 범죄와 병역 범죄, 보건 범죄의 경우 고발로 인해 검거된 경우가 압도적으로 높았다. <br>
+        제일 발생률이 높았던 교통 범죄는 신고와 불심검문으로 검거되는 경우가 대부분을 차지했다. <br>
+        강력 범죄중 가장 흉악 범죄인 살인기수는 타인의 신고로 30.9%가 검거되었으며 다음으로 변사체 발견, 현행범 체포 순으로 사건이 검거되었다.
       <br><br>
       하지만 여기서 제일 눈여겨봐야 할 부분은 <font color=#ff33333;>대부분의 범죄가 피해자 신고로 검거되었다는 것이다.</font> </p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    </div>
+    <div id="data_visualization">
+      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiODlkNWRlYTktZTFkNC00YzFhLWI2NGMtNzcxYWUyNmUwZmQ1IiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
+      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
+      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
+    </div>
+  </div>
+<br><br><br><br><br><br><br><br><br>
+  <div id="power_container">
+    <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
       <h1 style="font-size: 2.5vw;">2011 ~ 2018년<br>강력 범죄 발생 건수</h1>
       <h3>출처 : 경찰청,「경찰청범죄통계」</h3>
       <br>
       <p style="width: 21vw; height:16vw;">지난 2018년 <font color=#ff33333;>강력 범죄의 대부분은 강간·강제추행 등의 성범죄가 차지했다.</font> 특히 2011년부터 해를 거듭할수록 발생 건수가 점점 늘어나고 있으며 7년 새 1.2배 증가한 수치를 보여주고 있다. 반면 강도 범죄는 점점 낮아져 2018년 최저치를 찍었다.<br><br>
-        성범죄를 제외한 나머지 강력 범죄는 서서히 수치가 낮아지고 있다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+      성범죄를 제외한 나머지 강력 범죄는 서서히 수치가 낮아지고 있다.</p>
+    </div>
+    <div id="data_visualization">
+      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiYzEyZDUzMDctMzU4Mi00YzdiLWE1NDctMjA1Y2Q1MjY3ZTcxIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
+      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
+      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
+    </div>
+  </div>
+<br><br><br><br><br><br><br><br><br>
+  <div id="power_container">
+    <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
       <h1 style="font-size: 2.5vw;">4대 강력 범죄<br> 발생 시간</h1>
       <h3>출처 : 경찰청,「경찰청범죄통계」</h3>
       <br>
       <p style="width: 21vw; height:16vw;">성범죄의 경우 공통적으로 <font color=#ff33333;>저녁 ~ 새벽 시간대</font> 가장 많이 발생되었다는 사실을 파악할 수 있다. 살인 미수/기수의 경우 성범죄와는 다르게 <font color=#ff33333;>오후 ~ 밤 시간대</font> 가장 많이 발생하였다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    </div>
+    <div id="data_visualization">
+      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiZTdmN2ZmMmYtMTJlMi00ODFlLWFkOTItZDU0YzVhNDhhMmMxIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
+      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
+      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
+    </div>
+  </div>
+<br><br><br><br><br><br><br><br><br>
+  <div id="power_container">
+    <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
       <h1 style="font-size: 2.5vw;">4대 강력 범죄<br> 발생 장소</h1>
       <h3>출처 : 경찰청,「경찰청범죄통계」</h3>
       <br>
       <p style="width: 21vw; height:16vw;">대부분의 강력 범죄는 연립/다세대 아파트와 단독주택 인근, 노상에서 가장 많이 발생하였다. 다음으로 유흥업소와 숙박업소가 차지하는 비율이 높았다.
       <br><br>그중 <font color=#ff33333;>강간 범죄는 숙박업소에서 가장 많이 발생</font>하였다. 강간 범죄의 주 피해자인 여성들에게 특히 조심해야 할 부분이다. 이에 대해서 숙박시설의 범죄 예방에 대한 대책이 필요해 보인다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br>
-
+    </div>
+    <div id="data_visualization">
+      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiZGU1ODE1MzEtMzliMC00NWQ4LTk0MzItMzY4ZDAwMzg2YjBlIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
+      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
+      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
+    </div>
+  </div>
+<br><br><br><br><br><br><br><br><br>
+  <div id="power_container">
+    <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
       <h1 style="font-size: 2.5vw;">강력 범죄 범행 동기</h1>
       <h3>출처 : 검찰청,「범죄분석통계」</h3>
       <br>
       <p style="width: 21vw; height:16vw;">대부분의 강력 범죄는 <font color=#ff33333;>우발적</font>으로 발생하였다. 폭행, 상해, 협박의 경우 가정불화로 인해 발생하는 경우가 적지 않았다. 성범죄의 경우 호기심에 의해 발생하는 경우가 2위를 차지했다.<br><br>
       폭행, 상해가 지나칠 경우 살인으로 이어질 수 있다. 주목할만한 부분은 <font color=#ff33333;>가정불화로 인해 생기는 살인이 15%를 차지한다는 사실</font>이다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    </div>
+    <div id="data_visualization">
+      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiMDRkNDA4NTAtNjllZC00MWQ5LWE2M2YtZjQwMzVjNzBlYzk2IiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
+      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
+      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
+    </div>
+  </div>
+<br><br><br><br><br><br><br><br><br>
+  <div id="power_container">
+    <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
       <h1 style="font-size: 2.5vw;">살인 범죄에 사용된<br> 범행 도구</h1>
       <h3>출처 : 경찰청,「경찰청범죄통계」</h3>
       <br>
       <p style="width: 21vw; height:16vw;">칼 외에도 맨손, 공구, 독극물, 끈 등 살인 범죄에 많은 도구가 이용되었다. 맨손의 경우 주로 교살을 통한 살인이 이루어졌을 것으로 <br>보인다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br>
-
+    </div>
+    <div id="data_visualization">
+      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiY2ZmYzdmN2YtNzVjMC00N2I0LTg0YmMtNGVmMDExYWJhYmEwIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
+      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
+    </div>
+  </div>
+<br><br><br><br><br><br><br><br><br>
+  <div id="power_container">
+    <div id="container_contents">
       <svg id="class_line" width="700" height="10"><line x1="0" y1="0" x2="20vw" y2="0" stroke="white" stroke-width="0.5"></svg>
       <h1 style="font-size: 2.5vw;">범죄자 조치 상황</h1>
       <h3>출처 : 검찰청,「범죄분석통계」</h3>
       <br>
       <p style="width: 21vw; height:16vw;">강력 범죄를 제외한 대부분의 범죄는 재발, 은닉, 증거 인멸의 우려가 없어 불구속 송치로 조치가 되었다. 하지만 강력 범죄에서 살인과 강도의 경우 구속 송치가 더 높거나 비슷하다는 사실을 파악할 수 있다. </p>
     </div>
-
-
-
-
-
-
-
-
     <div id="data_visualization">
-      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiODY4MzkxMTktZjNmNi00NTU5LTljMmYtZDcxN2Q0YmNlMTRiIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
-      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
-      <p style="text-align:right;">* 죄종을 클릭하거나 그래프를 클릭하면 해당 죄종의 데이터를 볼 수 있습니다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiYmVlNTRhM2YtMTRiYS00ZmU3LWEyNWUtOGY5ZTljZWNmMjIxIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
-      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
-      <p style="text-align:right;">* 죄종을 클릭하거나 그래프를 클릭하면 해당 죄종의 데이터를 볼 수 있습니다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiNDRjYTUyNGItN2E2NC00YThjLThkMjUtZTVkZjdmNGRmN2I0IiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
-      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
-      <p style="text-align:right;">* 죄종을 클릭하거나 그래프를 클릭하면 해당 죄종의 데이터를 볼 수 있습니다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiODlkNWRlYTktZTFkNC00YzFhLWI2NGMtNzcxYWUyNmUwZmQ1IiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
-      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
-      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiYzEyZDUzMDctMzU4Mi00YzdiLWE1NDctMjA1Y2Q1MjY3ZTcxIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
-      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
-      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiZTdmN2ZmMmYtMTJlMi00ODFlLWFkOTItZDU0YzVhNDhhMmMxIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
-      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
-      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiZGU1ODE1MzEtMzliMC00NWQ4LTk0MzItMzY4ZDAwMzg2YjBlIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
-      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
-      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiMDRkNDA4NTAtNjllZC00MWQ5LWE2M2YtZjQwMzVjNzBlYzk2IiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
-      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
-      <p style="text-align:right;">* 해당 죄종을 클릭하면 데이터를 자세하게 볼 수 있습니다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-      <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiY2ZmYzdmN2YtNzVjMC00N2I0LTg0YmMtNGVmMDExYWJhYmEwIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
-      <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
-
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
       <iframe style="width: 56vw; height: 32.5vw;" src="https://app.powerbi.com/view?r=eyJrIjoiMjkwNzlmZTUtOGRlMS00MGQyLWFmMTctYTc4YTZmNWVhYmUyIiwidCI6IjhjYmI1ZjY2LWJmMzAtNDA0My04MTQ2LTQ1YTIwNGI2MTIzMCIsImMiOjEwfQ%3D%3D" frameborder="0" ></iframe>
       <p style="text-align:right;">* 데이터에 마우스 커서를 올리면 자세한 정보를 확인할 수 있습니다.</p>
     </div>
   </div>
+
   <div id="footer">Copyrightⓒ 2019/All Rights Reserved - KSK</div>
+
   <script type="text/javascript">
   $(document).ready(function($) {
       $('data_visualization').smoothScroll({
