--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </svg>
 
   <div id="report_title">대한민국 치안 현황 보고서</div>
-  <div id="report_title_contents">본 보고서는 대한민국 경찰청과 대검찰청의 2017년 통계 자료를 바탕으로 범죄 관련 데이터 베이스를 집대성하여 <br>시각화시킨 보고서이다. 범죄 발생 기간, 일기, 장소, 검거율, 조치율 등 모든 치안에 관련된 데이터를 한 눈에 보기 쉽게 정리하는 방법이 없을까해서 이 보고서를 만들게 되었다. 이에 CCP는 이 데이터 베이스를 통해 여러분과 함께 대한민국 치안 현황을 더 넓고 쉽게 알아보고자 한다. </div>
+  <div id="report_title_contents">본 보고서는 대한민국 경찰청과 대검찰청의 2017년 통계 자료를 바탕으로 범죄 관련 데이터 베이스를 집대성하여 <br>시각화시킨 보고서이다. 범죄 발생 및 검거 현황, 처리 기간,  장소, 검거율, 단서, 동기, 시간 등 모든 치안에 관련된 데이터를 한 눈에 보기 쉽게 정리하는 방법이 없을까해서 이 보고서를 만들게 되었다. 이에 CCP는 이 데이터 베이스를 통해 여러분과 함께 대한민국 치안 현황을 더 넓고 쉽게 알아보고자 한다. </div>
   <div id="report_caution">※ PC에서 최적화된 인터랙션을 볼 수 있습니다.</div>
   <video id="report_video" src="source/report_video.mp4" type="video/mp4" autoplay loop muted></video>
 
